Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,3 +2,10 @@
 	inheritFrom = Kernel-Projects
 [access "refs/heads/*"]
 	owner = group kernel-owners
+[project]
+	description = Kernel tree for Mediatek chipsets
+[receive]
+	requireSignedOffBy = true
+[submit]
+	action = fast forward only
+	mergeContent = false
