--- a/arch/arm/configs/zz_defconfig
+++ b/arch/arm/configs/zz_defconfig
@@ -545,7 +545,7 @@ CONFIG_PM_WAKELOCKS_GC=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_PM_SYNC_BEFORE_SUSPEND=y
