--- a/arch/arm/configs/zz_defconfig
+++ b/arch/arm/configs/zz_defconfig
@@ -243,10 +243,11 @@ CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_SIOPLUS=y
+# CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_ROW is not set
-# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
