--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -239,10 +239,12 @@ CONFIG_EFI_PARTITION=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
@@ -462,6 +464,7 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HYBRID is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -471,6 +474,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_HYBRID=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 
