--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -464,6 +464,7 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HYBRID is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG=y
@@ -474,6 +475,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 CONFIG_CPU_FREQ_GOV_HYBRID=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
