--- a/arch/arm/configs/zz_defconfig
+++ b/arch/arm/configs/zz_defconfig
@@ -28,7 +28,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-ZigZag-1.4"
+CONFIG_LOCALVERSION="-ZigZag 1.5"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -121,7 +121,6 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_NAMESPACES is not set
-CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
@@ -462,7 +461,6 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HYBRID is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG=y
@@ -473,7 +471,6 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 CONFIG_CPU_FREQ_GOV_HYBRID=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
@@ -2676,6 +2673,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 
 #
 # Kernel hacking
