--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -27,8 +27,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-OwnKernel-4.5"
+CONFIG_CROSS_COMPILE="4.5"
+CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
