Intelli-plug: intelligent hotplug cpu driver with eco mode
Signed-off-by: Swapnil Solanki <swapnil133609@gmail.com>
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>

Conflicts:
	arch/arm/mach-mt6582/intelli_plug.c

--- a/arch/arm/mach-mt6582/Kconfig
+++ b/arch/arm/mach-mt6582/Kconfig
@@ -38,5 +38,10 @@ config MAX_DRAM_SIZE_SUPPORT
 	        reserved for the modem and the PMEM.
 endmenu
 
+config INTELLI_PLUG
+	bool "Enable intelli-plug cpu hotplug driver"
+	default n
+	help
+	  Generic Intelli-plug cpu hotplug driver for ARM SOCs
 
 endif
