mako_hotplug: squash code from @franciscofranco
Signed-off-by: W4TCH0UT <ateekujjawal@gmail.com>
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>

--- a/arch/arm/mach-mt6582/Makefile
+++ b/arch/arm/mach-mt6582/Makefile
@@ -67,3 +67,4 @@ KBUILD_AFLAGS	:=$(KBUILD_AFLAGS:-msoft-float=-Wa,-mfpu=neon)
 # Module project related part
 obj-y += $(ARCH_MTK_PROJECT)/
 
+obj-y += mako_hotplug.o
