Added alucard's hotplug driver(thanks @Alucard24)
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>

--- a/arch/arm/mach-mt6582/Makefile
+++ b/arch/arm/mach-mt6582/Makefile
@@ -68,3 +68,4 @@ KBUILD_AFLAGS	:=$(KBUILD_AFLAGS:-msoft-float=-Wa,-mfpu=neon)
 obj-y += $(ARCH_MTK_PROJECT)/
 
 obj-y += mako_hotplug.o
+obj-y += alucard_hotplug.o
