--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -242,12 +242,23 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_FIOPS=y
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="fiops"
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_FIFO is not set
+CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -522,6 +533,8 @@ CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_WAKELOCK=y
 CONFIG_EARLYSUSPEND=y
 CONFIG_FB_EARLYSUSPEND=y
+# CONFIG_POWERSUSPEND is not set
+# CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_HIBERNATE_CALLBACKS=y
 CONFIG_HIBERNATION=y
 CONFIG_PM_STD_PARTITION=""
