blu_plug: Dynamic hotplug driver
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>

Conflicts:
	arch/arm/configs/sprout_defconfig
	arch/arm/hotplug/Kconfig
	arch/arm/hotplug/Makefile

--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -137,6 +137,7 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_HOTPLUG=y
+CONFIG_BLU_PLUG=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_EXPERT=y
 CONFIG_UID16=y
