--- a/arch/arm/mach-mt6582/Makefile
+++ b/arch/arm/mach-mt6582/Makefile
@@ -67,5 +67,5 @@ KBUILD_AFLAGS	:=$(KBUILD_AFLAGS:-msoft-float=-Wa,-mfpu=neon)
 # Module project related part
 obj-y += $(ARCH_MTK_PROJECT)/
 
-obj-y += mako_hotplug.o
-obj-y += alucard_hotplug.o
+obj-n += mako_hotplug.o
+obj-n += alucard_hotplug.o
