--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.10.84 Kernel Configuration
+# Linux/arm 3.10.87 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -368,7 +368,6 @@ CONFIG_ARM_NR_BANKS=8
 # CONFIG_ARM_ERRATA_775420 is not set
 # CONFIG_ARM_ERRATA_798181 is not set
 CONFIG_FIQ_GLUE=y
-CONFIG_INTELLI_PLUG=y
 CONFIG_BLU_PLUG=y
 
 #
@@ -473,10 +472,12 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HYBRID is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
@@ -487,6 +488,8 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
+# CONFIG_CPU_FREQ_GOV_ELEMENTALX is not set
+# CONFIG_CPU_FREQ_GOV_BLU_ACTIVE is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_HYBRID=y
@@ -1381,13 +1384,11 @@ CONFIG_MTK_PMIC_WRAP=y
 # CONFIG_MTK_BQ24296_SUPPORT is not set
 # CONFIG_MTK_BQ27541_SUPPORT is not set
 # CONFIG_MTK_NCP1851_SUPPORT is not set
-# CONFIG_MTK_DISABLE_POWER_ON_OFF_VOLTAGE_LIMITATION is not set
-CONFIG_MTK_PCB_BATTERY_SENSOR=y
-# CONFIG_MTK_GP2AP002S00F is not set
-# CONFIG_MTK_KXTJ2_1009 is not set
-CONFIG_MTK_KXTIK1004=y
+# CONFIG_MTK_WIRELESS_CHARGER_SUPPORT is not set
+CONFIG_MTK_RTC=y
 CONFIG_MTK_BMC156_ACC=y
 CONFIG_MTK_LSM303D=y
+CONFIG_MTK_KXTIK1004=y
 CONFIG_MTK_CM36283=y
 CONFIG_MTK_TMD2771=y
 CONFIG_MTK_BMC156_MAG=y
