--- a/arch/arm/configs/sprout_defconfig
+++ b/arch/arm/configs/sprout_defconfig
@@ -368,6 +368,7 @@ CONFIG_ARM_NR_BANKS=8
 # CONFIG_ARM_ERRATA_775420 is not set
 # CONFIG_ARM_ERRATA_798181 is not set
 CONFIG_FIQ_GLUE=y
+CONFIG_INTELLI_PLUG=y
 CONFIG_BLU_PLUG=y
 
 #
